<resources>
    <string name="app_name">Obinna C Emelumadu</string>
    <string name="date_range">Date Range: </string>
    <string name="gender">Gender: </string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="countries">Countries: </string>
    <string name="color">Color: </string>
    <string name="all">ALL</string>
    <string name="no_data">Sorry, there is no data</string>
    <string name="full_name">Full Name: </string>
    <string name="email">Email : </string>
    <string name="country">Country: </string>
    <string name="car">Car Make Color: </string>
    <string name="job">Job Title: </string>
    <string name="bio">Bio: </string>
</resources>