<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_boarder"
    android:orientation="vertical"
    android:padding="6dip">

    <TextView
        android:id="@+id/text_dateRange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/date_range"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/gender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_coutry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/countries"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_color"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/color"
        android:textSize="16sp" />

</LinearLayout>